<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:clickable="true">

    <TextView
        android:id="@+id/event_name"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:gravity="end|center"
        android:text="@string/event_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/event_date" />

    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="8dp"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@id/event_time"
        app:layout_constraintEnd_toStartOf="@id/event_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_time"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="8dp"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/event_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_date" />


</androidx.constraintlayout.widget.ConstraintLayout>