<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/white">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/event_header"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/event_title_short"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/header_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_event_name"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp" />

    <TextView
        android:id="@+id/view_event_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/event_title_short"
        app:layout_constraintTop_toBottomOf="@id/header_bar"
        app:layout_constraintStart_toEndOf="@id/event_header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/date_header"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/view_event_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_event_date"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp" />

    <TextView
        android:id="@+id/view_event_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/date"
        app:layout_constraintTop_toBottomOf="@id/view_event_name"
        app:layout_constraintStart_toEndOf="@id/date_header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/time_header"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/view_event_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_event_time"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp"/>

    <TextView
        android:id="@+id/view_event_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/view_event_date"
        app:layout_constraintStart_toEndOf="@id/time_header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/desc_header"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/event_description_short"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/view_event_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_event_description"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp"/>

    <TextView
        android:id="@+id/view_event_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/event_description_short"
        app:layout_constraintTop_toBottomOf="@id/view_event_time"
        app:layout_constraintStart_toEndOf="@id/desc_header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/edit_event_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@id/view_event_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"/>

    <Button
        android:id="@+id/delete_event_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/delete"
        app:layout_constraintTop_toBottomOf="@id/edit_event_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>